Progetto_20250712_01_GENERICO